2005-05-18  Jim Evins  <evins@snaught.com>

	* src/hig.h:
	* src/hig.c:
		Removed glHigDialog class.
	* src/file.c: (gl_file_new), (create_new_dialog_widgets),
	(gl_file_properties), (create_properties_dialog_widgets):
	* src/prefs-dialog.h:
	* src/prefs-dialog.c: (gl_prefs_dialog_get_type),
	(gl_prefs_dialog_init), (gl_prefs_dialog_construct):
	* src/print-dialog.h:
	* src/prefs-dialog.h:
	* src/print-dialog.c: (gl_print_dialog_get_type),
	(gl_print_dialog_init), (gl_print_dialog_construct):
		Replaced all instances of glHigDialog with GtkDialog.
	
2005-05-17  Jim Evins  <evins@snaught.com>

	* src/hig.h:
	* src/hig.c:
		Removed HigAlert class since it is obsoleted by the GtkMessageDialog class.
	* src/file.c: (open_response), (gl_file_open_real), (gl_file_save),
	(save_as_response), (gl_file_close):
		Replaced all instances of HigAlert widgets with GtkMessageDialog widgets.

2005-05-15  Jim Evins  <evins@snaught.com>

	* src/ui-commands.h:
	* src/ui-util.c:
	* src/ui-util.h:
	* src/ui.c:
	* src/ui.h:
	* src/view.c:
	* src/window.c:
	* src/window.h:
		A little code reformatting -- no functional changes.
	
2005-05-14  Jim Evins  <evins@snaught.com>

	* src/Makefile.am:
		Removed obsolete macros.
	* src/marshal.list:
		Added marshalling template to support new view signal: "context_menu_activate."
	* src/view.h:
	* src/view.c: (gl_view_class_init), (gl_view_construct),
	(canvas_event_arrow_mode):
		- Removed hardcoded context menus and added new signal "context_menu_activate"
		to push this up to the uimanager.
		- Removed merge properties and print dialogs so that they can be managed with
		the window by the uimanager.
	* src/merge-properties-dialog.h:
	* src/merge-properties-dialog.c: (gl_merge_properties_dialog_new),
	(gl_merge_properties_dialog_construct):
		Changed calling convention of gl_merge_properties_dialog_new() to use
		glLabel and GtkWindow instead of view to make more consistent with other
		dialogs.
	* src/print-dialog.h: