@@ -68,7 +68,7 @@
 	<widget class="GtkVBox" id="merge_properties_vbox">
 	  <property name="visible">True</property>
 	  <property name="homogeneous">False</property>
-	  <property name="spacing">0</property>
+	  <property name="spacing">6</property>
 
 	  <child>
 	    <widget class="GtkFrame" id="frame1">
@@ -226,7 +226,6 @@
 
 	  <child>
 	    <widget class="GtkFrame" id="frame2">
-	      <property name="border_width">6</property>
 	      <property name="visible">True</property>
 	      <property name="label_xalign">0</property>
 	      <property name="label_yalign">0.5</property>
